<resources>
    <string name="app_name">ProjectManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your Email and Password</string>
    <string name="profile_picture">profilePicture\n</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="menu">menu</string>
    <string name="nav_open">Open navigation</string>
    <string name="nav_close">Close navigation</string>
    <string name="username">username</string>
    <string name="Create">Create Board</string>
    <string name="create">Create\n</string>
    <string name="action_add_list">add list</string>
    <string name="hint_list_name">last name</string>
    <string name="add_list">Add List</string>
    <string name="task_name">Task Name</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="update">Update</string>
    <string name="hint_card_name">card name</string>
    <string name="members">members</string>


</resources>